fixing the text wrap button 2

--- a/src/components/CoreComponents/ButtonSimulateurAdd/ButtonSimulateurAdd.module.css
+++ b/src/components/CoreComponents/ButtonSimulateurAdd/ButtonSimulateurAdd.module.css
@@ -18,7 +18,7 @@
   width: 100%;
   border: none;
   background: transparent; /* Avoid using white, as it may conflict with other styles */
-  font-size: 30px;
+  font-size: 18px;
   display: flex;
   align-items: center;
   justify-content: center;
